; ModuleID = '/home/carl/AnghaBench/poco/JSON/src/extr_pdjson.c_stream_get.c'
source_filename = "/home/carl/AnghaBench/poco/JSON/src/extr_pdjson.c_stream_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_source = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.json_source*)* @stream_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stream_get(%struct.json_source* %0) #0 {
  %2 = alloca %struct.json_source*, align 8
  store %struct.json_source* %0, %struct.json_source** %2, align 8
  %3 = load %struct.json_source*, %struct.json_source** %2, align 8
  %4 = getelementptr inbounds %struct.json_source, %struct.json_source* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = add nsw i32 %5, 1
  store i32 %6, i32* %4, align 4
  %7 = load %struct.json_source*, %struct.json_source** %2, align 8
  %8 = getelementptr inbounds %struct.json_source, %struct.json_source* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @fgetc(i32 %11)
  ret i32 %12
}

declare dso_local i32 @fgetc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
